Replace deprecated method.